--- a/week9/day1/FilmProject/films/templates/partials/navbar.html
+++ b/week9/day1/FilmProject/films/templates/partials/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link "  href="{% url 'homepage' %}">Home</a>
+                    <a class="nav-link " href="{% url 'homepage' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Welcome</a>
@@ -16,12 +16,31 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Profile</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="{% url 'add-director' %}">Add a director</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="{% url 'add-film' %}">Add a film</a>
-                </li>
+{#                <div class="d-flex">#}
+                    {% if  user.is_authenticated %}
+
+                        <li class="nav-item">
+                            <a class="nav-link " href="{% url 'add-director' %}">Add a director</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="{% url 'add-film' %}">Add a film</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Hello {{ user.username }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a href="{% url 'login' %}" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'signup' %}" class="nav-link">signup</a>
+                        </li>
+                    {% endif %}
+{#                </div>#}
             </ul>
         </div>
     </div>
