--- a/week9/day1/FilmProject/accounts/templates/accounts/profile.html
+++ b/week9/day1/FilmProject/accounts/templates/accounts/profile.html
@@ -3,6 +3,6 @@
     <div class="card p-3 bg-light" style="width: max-content">
         <h1>{{ user.username|capfirst }} Profile</h1>
         <h6> {{ user.email }} </h6>
+{#        {{ user.is_superuser }}#}
     </div>
-
 {% endblock %}
