--- a/week9/day1/FilmProject/films/templates/partials/navbar.html
+++ b/week9/day1/FilmProject/films/templates/partials/navbar.html
@@ -5,19 +5,24 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+
                 <li class="nav-item">
                     <a class="nav-link " href="{% url 'homepage' %}">Home</a>
                 </li>
+
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">Welcome</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
-                </li>
-{#                <div class="d-flex">#}
-                    {% if  user.is_authenticated %}
+
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">Hello {{ user.username }}</a>
+                    </li>
+                    {% if  user.is_superuser %}
 
                         <li class="nav-item">
                             <a class="nav-link " href="{% url 'add-director' %}">Add a director</a>
@@ -25,22 +30,19 @@
                         <li class="nav-item">
                             <a class="nav-link " href="{% url 'add-film' %}">Add a film</a>
                         </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Hello {{ user.username }}</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'logout' %}" class="nav-link">Logout</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a href="{% url 'login' %}" class="nav-link">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'signup' %}" class="nav-link">signup</a>
-                        </li>
                     {% endif %}
-{#                </div>#}
+
+                    <li class="nav-item">
+                        <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a href="{% url 'login' %}" class="nav-link">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'signup' %}" class="nav-link">signup</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
